# SDM

./: .gitignore  CMakeLists.txt  a.out  bin.h  bumpalo.h  bumpalobase.h  check_memory.sh  main  main.cpp  palo.h  safalo.cpp  safalo.h  sdm.cpp  sdm.h  test.cpp  test_bumpalo.cpp  test_bumpalo_with_map.cpp  test_bumpalobase.cpp  test_bumpalobase_exhausted.cpp  test_bumpalobase_pool_not_created_yet.cpp  test_safalo_permit.cpp  test_safalo_prohibit.cpp  test_typename.cpp  typename.h
